--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -10,4 +10,10 @@
         android:layout_height="match_parent"
         android:text="@string/location" />
 
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/address" />
+
 </FrameLayout>
