--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -1,19 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LocationFragment">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/location" />
+    tools:listitem="@layout/list_location"
+    tools:context=".LocationFragment"
+    android:layout_marginTop="5dp">
 
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/address" />
-
-</FrameLayout>
+</androidx.recyclerview.widget.RecyclerView>
