--- a/app/src/main/res/layout/list_location.xml
+++ b/app/src/main/res/layout/list_location.xml
@@ -7,27 +7,27 @@
     android:background="@drawable/frame"
     android:layout_marginBottom="5dp"
     android:layout_marginStart="5dp"
-    android:layout_marginEnd="5dp">
+    android:layout_marginEnd="5dp"
+    android:padding="16dp">
 
     <TextView
         android:id="@+id/namelokasi"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:maxLines="3"
         android:padding="5dp"
+        android:layout_marginHorizontal="20dp"
         android:text="@string/location"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.141"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/addresslokasi"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
         android:maxLines="3"
@@ -43,23 +43,22 @@
 
     <ImageView
         android:id="@+id/posterlokasi"
-        android:layout_width="250dp"
+        android:layout_width="0dp"
         android:layout_height="250dp"
         android:layout_gravity="center"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="10dp"
         android:background="@color/cardview_dark_background"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="@+id/addresslokasi"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/addresslokasi"
-        app:layout_constraintTop_toTopOf="@+id/addresslokasi"
+        app:layout_constraintTop_toBottomOf="@+id/addresslokasi"
         tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/deskripsilokasi"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="260dp"
+        android:layout_margin="10dp"
         android:maxLines="3"
         android:padding="5dp"
         android:text="@string/deskripsi"
@@ -70,7 +69,7 @@
         app:layout_constraintEnd_toEndOf="@+id/posterlokasi"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/posterlokasi"
-        app:layout_constraintTop_toTopOf="@+id/posterlokasi" />
+        app:layout_constraintTop_toBottomOf="@+id/posterlokasi" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
