--- a/app/src/main/res/layout/list_location.xml
+++ b/app/src/main/res/layout/list_location.xml
@@ -5,9 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/frame"
-    android:layout_marginBottom="5dp"
-    android:layout_marginStart="5dp"
-    android:layout_marginEnd="5dp"
+    android:layout_margin="10dp"
     android:padding="16dp">
 
     <TextView
@@ -29,7 +27,6 @@
         android:id="@+id/addresslokasi"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
         android:maxLines="3"
         android:padding="5dp"
         android:text="@string/address"
@@ -39,7 +36,7 @@
         app:layout_constraintEnd_toEndOf="@+id/namelokasi"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/namelokasi"
-        app:layout_constraintTop_toTopOf="@+id/namelokasi" />
+        app:layout_constraintTop_toBottomOf="@+id/namelokasi" />
 
     <ImageView
         android:id="@+id/posterlokasi"
@@ -48,7 +45,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
         android:background="@color/cardview_dark_background"
-        android:scaleType="fitCenter"
+        android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="@+id/addresslokasi"
         app:layout_constraintStart_toStartOf="@+id/addresslokasi"
         app:layout_constraintTop_toBottomOf="@+id/addresslokasi"
