--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -101,6 +101,13 @@
                 android:textSize="18sp"
                 tools:text="Setiap hari (08:00-00:00)" />
 
+            <androidx.fragment.app.FragmentContainerView
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:id="@+id/detail_map"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_marginTop="20dp" />
+
             <View
                 android:layout_marginVertical="20dp"
                 android:layout_height="1dp"
