--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,144 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/detail_scroll_view"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     tools:context=".activity.DetailActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <ScrollView
+        android:id="@+id/detail_scroll_view"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent">
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/detail_photo_pager"
-            android:layout_width="0dp"
-            android:layout_height="300dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardView2"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:alpha="0.8"
-            app:cardBackgroundColor="?attr/colorButtonNormal"
-            app:cardCornerRadius="5dp"
-            app:cardElevation="0dp"
-            app:layout_constraintBottom_toBottomOf="@id/detail_photo_pager"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            android:layout_width="match_parent">
 
-            <TextView
-                android:id="@+id/detail_photo_position"
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/detail_photo_pager"
+                android:layout_height="300dp"
+                android:layout_width="0dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.cardview.widget.CardView
+                android:alpha="0.8"
+                android:id="@+id/cardView2"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
                 android:layout_width="wrap_content"
+                app:cardBackgroundColor="?attr/colorButtonNormal"
+                app:cardCornerRadius="5dp"
+                app:cardElevation="0dp"
+                app:layout_constraintBottom_toBottomOf="@id/detail_photo_pager"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+
+                <TextView
+                    android:id="@+id/detail_photo_position"
+                    android:layout_gravity="center"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:paddingHorizontal="20dp"
+                    android:paddingVertical="4dp"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    tools:text="2 / 3" />
+
+            </androidx.cardview.widget.CardView>
+
+            <LinearLayout
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:paddingHorizontal="20dp"
-                android:paddingVertical="4dp"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                tools:text="2 / 3" />
+                android:layout_width="0dp"
+                android:orientation="vertical"
+                android:padding="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/detail_photo_pager">
 
-        </androidx.cardview.widget.CardView>
+                <TextView
+                    style="@style/TextAppearance.MaterialComponents.Overline"
+                    android:id="@+id/detail_status"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:text="@string/dibuka"
+                    android:textSize="16sp" />
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="20dp"
-            app:layout_constraintTop_toBottomOf="@id/detail_photo_pager"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+                <TextView
+                    style="@style/TextAppearance.MaterialComponents.Subtitle2"
+                    android:id="@+id/detail_nama_lokasi"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:textColor="@color/black"
+                    android:textSize="36sp"
+                    tools:text="Nama Lokasi" />
 
-            <TextView
-                android:id="@+id/detail_status"
-                style="@style/TextAppearance.MaterialComponents.Overline"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:text="@string/dibuka" />
+                <ImageView
+                    android:contentDescription="@string/star_review"
+                    android:id="@+id/detail_bintang"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="5dp"
+                    android:layout_width="wrap_content"
+                    android:src="@drawable/star_review_0_5" />
 
-            <TextView
-                android:id="@+id/detail_nama_lokasi"
-                style="@style/TextAppearance.MaterialComponents.Subtitle2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:textSize="36sp"
-                tools:text="Nama Lokasi" />
+                <TextView
+                    android:id="@+id/detail_alamat"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="8dp"
+                    android:layout_width="wrap_content"
+                    android:textSize="18sp"
+                    tools:text="Alamat Lokasi" />
 
-            <ImageView
-                android:id="@+id/detail_bintang"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="5dp"
-                android:src="@drawable/star_review_0_5"
-                android:contentDescription="@string/star_review"/>
+                <TextView
+                    style="@style/TextAppearance.MaterialComponents.Body2"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:text="@string/jadwal_buka"
+                    android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/detail_alamat"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:layout_marginVertical="8dp"
-                tools:text="Alamat Lokasi" />
-
-            <TextView
-                style="@style/TextAppearance.MaterialComponents.Body2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:text="@string/jadwal_buka" />
-
-            <TextView
-                android:id="@+id/detail_jadwal_buka"
-                style="@style/TextAppearance.MaterialComponents.Subtitle2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="18sp"
-                tools:text="Setiap hari (08:00-00:00)" />
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp">
+                <TextView
+                    style="@style/TextAppearance.MaterialComponents.Subtitle2"
+                    android:id="@+id/detail_jadwal_buka"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:textSize="18sp"
+                    tools:text="Setiap hari (08:00-00:00)" />
 
                 <androidx.fragment.app.FragmentContainerView
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
                     android:id="@+id/detail_map"
+                    android:layout_height="200dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_width="match_parent"
                     android:name="com.google.android.gms.maps.SupportMapFragment" />
 
-                <ProgressBar
-                    android:id="@+id/detail_loading"
-                    android:layout_width="wrap_content"
+                <View
+                    android:background="?android:attr/listDivider"
+                    android:layout_height="1dp"
+                    android:layout_marginVertical="20dp"
+                    android:layout_width="match_parent" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/detail_recycler_view"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"/>
+                    android:layout_width="match_parent"
+                    tools:listitem="@layout/list_detail_review" />
 
-            </FrameLayout>
+            </LinearLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
+
+    <ProgressBar
+        android:id="@+id/detail_loading"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_centerInParent="true"/>
+
+</RelativeLayout>
 
 
-
-            <View
-                android:layout_marginVertical="20dp"
-                android:layout_height="1dp"
-                android:layout_width="match_parent"
-                android:background="?android:attr/listDivider"
-                />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/detail_recycler_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:listitem="@layout/list_detail_review"/>
-
-        </LinearLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</ScrollView>
 
