Mengedit dan membuat border layout

--- a/app/src/main/res/drawable/frame1.xml
+++ b/app/src/main/res/drawable/frame1.xml
@@ -10,6 +10,6 @@
         android:color="@color/white"/>
 
     <stroke
-        android:color="#FF03DAC5"
+        android:color="@color/black"
         android:width="3dp"/>
 </shape>
