--- a/app/src/main/res/layout/list_location.xml
+++ b/app/src/main/res/layout/list_location.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/frame"
+    android:background="@drawable/frame2"
     android:layout_margin="10dp"
     android:padding="16dp">
 
@@ -17,8 +17,9 @@
         android:layout_marginHorizontal="20dp"
         android:text="@string/location"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="26sp"
         android:textStyle="bold"
+        android:fontFamily="@font/mmedium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -31,8 +32,9 @@
         android:padding="5dp"
         android:text="@string/address"
         android:textColor="@color/black"
-        android:textSize="12sp"
+        android:textSize="11sp"
         android:textStyle="normal"
+        android:fontFamily="@font/mlight"
         app:layout_constraintEnd_toEndOf="@+id/namelokasi"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/namelokasi"
@@ -63,6 +65,7 @@
         android:textColor="@color/black"
         android:textSize="12sp"
         android:textStyle="normal"
+        android:fontFamily="@font/mlight"
         app:layout_constraintEnd_toEndOf="@+id/posterlokasi"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/posterlokasi"
